# check_bipm_data

./: LICENSE  README.md  pyproject.toml
check_bipm_data/: check.py
