[tool.poetry]
name = "check-bipm-data"
version = "0.1.0"
description = "Helper scripts to check data sent to the BIPM"
authors = ["Frédéric Meynadier <frederic.meynadier@bipm.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "check_bipm_data"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
altair = "^4.2.0"
altair-viewer = "^0.4.0"

[tool.poetry.scripts]
check_bipm_data = 'check_bipm_data.check:main'


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
